# oxc-angular-compiler

./: .gitignore  .oxfmtrc.json  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  typos.toml
.github/: renovate.json
crates/angular_conformance/: Cargo.toml  README.md
crates/angular_conformance/fixtures/: compiler_facade_interface_spec.json  expression_parser_ast_spec.json  expression_parser_lexer_spec.json  expression_parser_parser_spec.json  expression_parser_serializer_spec.json  i18n_digest_spec.json  i18n_extractor_merger_spec.json  i18n_i18n_ast_spec.json  i18n_i18n_html_parser_spec.json  i18n_i18n_parser_spec.json  i18n_integration_xliff2_spec.json  i18n_integration_xliff_spec.json  i18n_integration_xmb_xtb_spec.json  i18n_message_bundle_spec.json  i18n_serializers_i18n_ast_spec.json  i18n_serializers_placeholder_spec.json  i18n_serializers_xliff2_spec.json  i18n_serializers_xliff_spec.json  i18n_serializers_xmb_spec.json  i18n_serializers_xml_helper_spec.json  i18n_serializers_xtb_spec.json  i18n_translation_bundle_spec.json  i18n_whitespace_sensitivity_spec.json  integration_spec.json  ml_parser_ast_serializer_spec.json  ml_parser_html_parser_spec.json  ml_parser_html_whitespaces_spec.json  ml_parser_inline_comment_spec.json  ml_parser_lexer_spec.json  output_abstract_emitter_node_only_spec.json  output_abstract_emitter_spec.json  output_output_jit_spec.json  output_source_map_spec.json  render3_r3_ast_absolute_span_spec.json  render3_r3_ast_spans_spec.json  render3_r3_ast_visitor_spec.json  render3_r3_template_transform_spec.json  render3_style_parser_spec.json  render3_view_binding_spec.json  render3_view_i18n_spec.json  (+14 more)
crates/angular_conformance/snapshots/: angular.snap.md
crates/angular_conformance/src/: runner.rs
crates/angular_conformance/src/extractor/: mod.rs  util.rs
crates/angular_conformance/src/subsystems/: html_whitespace.rs
crates/oxc_angular_compiler/: Cargo.toml
crates/oxc_angular_compiler/src/: compilation_mode.rs  dts.rs  lib.rs
crates/oxc_angular_compiler/src/ast/: expression.rs  html.rs  r3.rs
crates/oxc_angular_compiler/src/class_debug_info/: compiler.rs  metadata.rs
crates/oxc_angular_compiler/src/class_metadata/: builders.rs  compiler.rs  metadata.rs
crates/oxc_angular_compiler/src/component/: cross_file_elision.rs  decorator.rs  defer_resolver.rs  definition.rs  dependency.rs  hoist.rs  import_elision.rs  metadata.rs  mod.rs  namespace_registry.rs  transform.rs
crates/oxc_angular_compiler/src/directive/: compiler.rs  decorator.rs  definition.rs  metadata.rs  mod.rs  property_decorators.rs  query.rs
crates/oxc_angular_compiler/src/factory/: compiler.rs  metadata.rs  mod.rs
crates/oxc_angular_compiler/src/hmr/: dependencies.rs  initializer.rs  update_module.rs
crates/oxc_angular_compiler/src/i18n/: ast.rs  extractor_merger.rs  parser.rs
crates/oxc_angular_compiler/src/injectable/: compiler.rs  decorator.rs  definition.rs  metadata.rs  mod.rs
crates/oxc_angular_compiler/src/injector/: compiler.rs  metadata.rs
crates/oxc_angular_compiler/src/ir/: enums.rs  expression.rs  ops.rs
crates/oxc_angular_compiler/src/linker/: mod.rs
crates/oxc_angular_compiler/src/ng_module/: compiler.rs  decorator.rs  definition.rs  metadata.rs  mod.rs
crates/oxc_angular_compiler/src/optimizer/: adjust_static_members.rs  mod.rs
crates/oxc_angular_compiler/src/output/: ast.rs  emitter.rs  oxc_converter.rs
crates/oxc_angular_compiler/src/partial/: class_metadata.rs  component.rs  directive.rs  factory.rs  injectable.rs  injector.rs  mod.rs  ng_module.rs  pipe.rs
crates/oxc_angular_compiler/src/pipe/: compiler.rs  decorator.rs  definition.rs  metadata.rs  mod.rs
crates/oxc_angular_compiler/src/pipeline/: compilation.rs  constant_pool.rs  conversion.rs  emit.rs  expression_store.rs  ingest.rs  selector.rs
crates/oxc_angular_compiler/src/r3/: identifiers.rs  mod.rs
crates/oxc_angular_compiler/src/schema/: dom_security_schema.rs  mod.rs  trusted_types_sinks.rs
crates/oxc_angular_compiler/src/service/: compiler.rs  decorator.rs  definition.rs  metadata.rs  mod.rs
crates/oxc_angular_compiler/src/styles/: encapsulation.rs  minify.rs  mod.rs
crates/oxc_angular_compiler/src/transform/: control_flow.rs  html_to_r3.rs
crates/oxc_angular_compiler/src/util/: deferred_time.rs  mod.rs  type_extract.rs
crates/oxc_angular_compiler/tests/: adjust_static_members_test.rs  change_detection_eager_test.rs  class_metadata_resources_test.rs  expression_parser_test.rs  host_binding_security_test.rs  html_lexer_test.rs  html_parser_test.rs  integration_test.rs  jit_signal_initializer_test.rs  linker_test.rs  namespaced_attr_codegen_test.rs  nextcontext_listener.rs  nextcontext_repro.rs  partial_class_metadata_async_test.rs  partial_class_metadata_test.rs  partial_component_test.rs  partial_directive_test.rs  partial_e2e_test.rs  partial_factory_test.rs  partial_injectable_test.rs  partial_ng_module_test.rs  partial_pipe_test.rs  partial_service_test.rs  partial_upstream_parity_test.rs  playground_repro.rs  r3_template_transform_test.rs  service_decorator_aot_test.rs  shadow_css_test.rs  signal_member_jit_metadata_test.rs  svg_animation_sanitization_test.rs  variable_naming_test.rs
crates/oxc_angular_compiler/tests/snapshots/: integration_test__animation_enter_string_literal_embedded_view.snap  integration_test__animation_enter_string_literal_only_embedded_view.snap  integration_test__aot_service_decorator_auto_provided_false.snap  integration_test__aot_service_decorator_basic.snap  integration_test__aot_service_decorator_custom_factory.snap  integration_test__aot_service_decorator_inline_arrow_factory.snap  integration_test__array_multiple_spreads.snap  integration_test__array_spread_in_binding.snap  integration_test__attribute_interpolation_angular_v19.snap  integration_test__class_map_interpolation_angular_v19.snap  integration_test__component_with_inline_styles.snap  integration_test__component_with_multiple_styles.snap  (+131 more)
(+164 files in other folders)
