[workspace]
resolver = "3"
members = ["crates/*", "napi/angular-compiler"]

[workspace.package]
authors = ["LongYinan <brooklyn@voidzero.dev>"]
categories = ["compilers", "web-programming"]
homepage = "https://oxc.rs"
keywords = ["Angular", "compiler", "TypeScript"]
license = "MIT"
repository = "https://github.com/voidzero-dev/oxc-angular-compiler"
description = "Angular compiler built with Oxc"

edition = "2024"
rust-version = "1.90.0"

# <https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html>
[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
tail_expr_drop_order = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# restriction
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
self_named_module_files = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
unnecessary_safety_comment = "warn"
undocumented_unsafe_blocks = "warn"
infinite_loop = "warn"
map_with_unused_argument_over_ranges = "warn"
unused_result_ok = "warn"
pathbuf_init_then_push = "warn"
# pedantic
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
doc_markdown = "allow"
similar_names = "allow"
fn_params_excessive_bools = "allow"
complexity = { level = "warn", priority = -1 }
too_many_arguments = "allow"
non_std_lazy_statics = "allow"
# nursery
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
cognitive_complexity = "allow"
non_send_fields_in_send_ty = "allow"
use_self = "allow"
significant_drop_tightening = "allow"
branches_sharing_code = "allow"
fallible_impl_from = "allow"
useless_let_if_seq = "allow"
impl_trait_in_params = "allow"
significant_drop_in_scrutinee = "warn"
iter_on_single_items = "warn"
unused_peekable = "warn"
too_long_first_doc_paragraph = "warn"
suspicious_operation_groupings = "warn"
redundant_clone = "warn"
zero_sized_map_values = "allow"
# cargo
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"

[workspace.dependencies]
# External oxc crates from crates.io
oxc_allocator = "0.122"
oxc_ast = "0.122"
oxc_ast_visit = "0.122"
oxc_diagnostics = "0.122"
oxc_napi = "0.122"
oxc_parser = "0.122"
oxc_semantic = "0.122"
oxc_span = "0.122"
oxc_sourcemap = "6.0.1"
oxc_transformer = "0.122"
oxc_codegen = "0.122"

# Internal
oxc_angular_compiler = { path = "crates/oxc_angular_compiler" }

# NAPI dependencies
napi = { version = "3", features = ["tokio_rt"] }
napi-build = "2"
napi-derive = "3"

# Common dependencies
indexmap = "2"
rustc-hash = "2"
serde = "1"
serde_json = "1"

# Other dependencies
insta = "1.43.2"
lazy-regex = "3.5.1"
miette = { package = "oxc-miette", version = "2.7.0", features = ["fancy-no-syscall"] }
mimalloc-safe = "0.1.56"
pico-args = "0.5.0"
project-root = "0.2.2"
similar = "2.7.0"

[workspace.metadata.cargo-shear]
ignored = []

[profile.dev]
debug = false

[profile.test]
debug = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.coverage]
inherits = "release"
opt-level = 2
codegen-units = 256
lto = "thin"
debug-assertions = true
overflow-checks = true
