[package]
name = "oxc_angular_conformance"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[[bin]]
name = "oxc_angular_conformance"
path = "src/main.rs"
test = false
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_angular_compiler = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
oxc_str = { workspace = true }

pico-args = { workspace = true }
project-root = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
similar = { workspace = true }
