[package]
name = "oxc_angular_compiler"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"

[lib]
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_sourcemap = { workspace = true }
oxc_transformer = { workspace = true }
oxc_codegen = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }
indexmap = { workspace = true }
lightningcss = "1.0.0-alpha.71"
oxc_resolver = { version = "11", optional = true }
pathdiff = { version = "0.2", optional = true }
semver = "1.0.27"

[features]
default = []
cross_file_elision = ["oxc_resolver", "pathdiff"]

[dev-dependencies]
insta = { workspace = true, features = ["glob"] }
tempfile = "3"

[lints]
workspace = true
